--- a/WebContent/views/desktop/maestro/main/IndicadorIndex.zul
+++ b/WebContent/views/desktop/maestro/main/IndicadorIndex.zul
@@ -1,5 +1,5 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div width="100%" class='opacity-0'
+	<div width="100%" class='${arg.animation_}'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPIndicador')">
@@ -14,7 +14,7 @@
 						<listhead sizable="true">
 							
 							<listheader width="33%" label="Nombre" />
-							<listheader width="33%" label="Descripcion" />
+							<listheader width="33%" label="Descripción" />
 							<listheader width="33%" label="Unidad de Medida" />
 						</listhead>
 						<template name="model">
