--- a/WebContent/views/desktop/maestro/main/FrecuenciaAporteIndex.zul
+++ b/WebContent/views/desktop/maestro/main/FrecuenciaAporteIndex.zul
@@ -12,14 +12,14 @@
 						selectedItem="@bind(vm.selectedObject)">
 
 						<listhead sizable="true">
-							<listheader width="33%" label="Unidad Medida" />
 							<listheader width="33%" label="Nombre" />
+							<listheader width="33%" label="Unidad de Medida" />
 							<listheader width="33%" label="Frecuencia" />
 						</listhead>
 						<template name="model">
 							<listitem>
-								<listcell label="@load(each.fkUnidadMedida)" />
 								<listcell label="@load(each.nombre)" />
+								<listcell label="@load(each.fkUnidadMedida.nombre)" />
 								<listcell label="@load(each.frecuencia)" />
 							</listitem>
 						</template>
