--- a/WebContent/views/desktop/maestro/main/TrabajoSocialIndex.zul
+++ b/WebContent/views/desktop/maestro/main/TrabajoSocialIndex.zul
@@ -12,15 +12,15 @@
 						selectedItem="@bind(vm.selectedObject)">
 
 						<listhead sizable="true">
-							<listheader width="33%" label="Clasificador Trabajo Social" />
 							<listheader width="33%" label="Nombre" />
-							<listheader width="33%" label="Descripcion" />
+							<listheader width="33%" label="Descripción" />
+							<listheader width="33%" label="Clasificador de Trabajo Social" />
 						</listhead>
 						<template name="model">
 							<listitem>
-								<listcell label="@load(each.fkClasificadorTrabajoSocial)" />
 								<listcell label="@load(each.nombre)" />
 								<listcell label="@load(each.descripcion)" />
+								<listcell label="@load(each.fkClasificadorTrabajoSocial.nombre)" />
 							</listitem>
 						</template>
 						<listfoot>
