--- a/WebContent/views/desktop/maestro/view/TrabajoSocialFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/TrabajoSocialFormBasic.zul
@@ -1,39 +1,73 @@
 <zk xmlns:n="native" xmlns:w="client">
+		<style>
+			.z-comboitem-selected { background: #AFA197 !important; color:
+			#ffffff !important; } 
+			.z-comboitem:hover,
+			.z-comboitem-selected:hover { 
+			background: #F0F2DC !important;
+			color: #8D7A6F !important; } 
+			
+			.z-comboitem-selected:hover
+			.z-comboitem-text { color: #8D7A6F !important; }
+	
+			.z-comboitem-selected .z-comboitem-text { color: #ffffff
+			!important; }
+	
+			.z-comboitem { text-shadow: none !important; }
+	
+			.page-content-main textarea.materialize-textarea { max-height:
+			100px; }
+			
+			.page-content-main textarea.materialize-textarea:hover, 
+			.page-content-main textarea.materialize-textarea:active,
+			.page-content-main textarea.materialize-textarea:focus{
+				overflow-y: auto; 
+			}
+		</style>
+		
 	<div width="80%" class="container ${arg.animation_}"
 		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.viewmodels.views.VMVTrabajoSocial')">
 
 		<div class="row">
+			
 			<div class="col s12">
-				<div class="input-field col s6">
-					<n:label class="active"
-						for="fk_clasificador_trabajo_social">
-						Clasificador Trabajo Social
-					</n:label>
-					<combobox id="fk_clasificador_trabajo_social"
-						readonly="true">
-						<comboitem label="Choice 1" value="c1" />
-						<comboitem label="Choice 2" value="c2" />
-						<comboitem label="Choice 3" value="c3" />
-					</combobox>
-				</div>
-				<div class="input-field col s6">
+				<div class="input-field offset-s2 col s8">
 					<n:label for="nombre">Nombre</n:label>
-					<textbox id="nombre" type="text"
+					<textbox id="nombre" type="text" maxlength="100"
 						value="@bind(vm.trabajoSocial.nombre)">
 					</textbox>
 				</div>
 			</div>
+			
+			<div sclass="col s12">
+				<div class="input-field offset-s2 col s8">
+					<n:label class="active"
+						for="fk_clasificador_trabajo_social">
+						Clasificador de Trabajo Social
+					</n:label>
+					<combobox id="fk_clasificador_trabajo_social"
+						readonly="true" model="@bind(vm.clasificadorTrabajoSocials)"
+						selectedItem="@bind(vm.trabajoSocial.fkClasificadorTrabajoSocial)">
+						<template name="model">
+							<comboitem label="@load(each.nombre)" />
+						</template>
+					</combobox>
+				</div>
+			</div>
+	
 			<div class="col s12">
-				<div class="input-field col s12">
-					<n:label for="descripcion">Descripcion</n:label>
-					<textbox id="descripcion" type="text"
+				<div class="input-field offset-s2 col s8">
+					<n:label for="descripcion">Descripción</n:label>
+					<textbox id="descripcion" type="text" maxlength="250"
+						sclass="materialize-textarea" multiline="true"
 						value="@bind(vm.trabajoSocial.descripcion)">
 					</textbox>
 				</div>
 			</div>
 		</div>
+
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
