--- a/WebContent/views/desktop/configuracion/plantillaEvento/PlantillaEventoFormBasic.zul
+++ b/WebContent/views/desktop/configuracion/plantillaEvento/PlantillaEventoFormBasic.zul
@@ -9,9 +9,9 @@
 			</div>
 			
 			<div>
-				<tabbox id="tb">
+				<tabbox id="tb" class="rtab">
     				<tabs id="tabs">
-        				<tab id="tabIndicadores" label="Indicadores" />
+        				<tab id="tabIndicadores" label="Indicadores" selected="true" />
         				<tab id="tabTareas" label="Tareas" />
     				</tabs>
     			
@@ -19,44 +19,56 @@
         				<tabpanel>
 							<hlayout>
 								<vlayout>
-									Indicadores
-									<listbox model="@bind(vm.indicadores)" selectedItems="@bind(vm.indicadoresSel)" multiple="true" width="400px" height="300px"/>
+									<listbox model="@bind(vm.indicadores)" selectedItems="@bind(vm.indicadoresSel)" multiple="true" width="400px" height="300px">
+										<listhead sizable="true">
+											<listheader label="Indicadores" />
+										</listhead>
 										<template name="model">
 											<listitem label="@load(each.nombre)" />
 										</template>
+									</listbox>
 								</vlayout>
 								<vbox vflex="1">
 									<button label="&gt;" onClick="@command('indicadoresAPlantilla')"/>
 									<button label="&lt;" onClick="@command('indicadoresFueraPlantilla')"/>
 								</vbox>
 								<vlayout>
-									Indicadores del evento
-									<listbox model="@bind(vm.plantillaEventoIndicadores)" selectedItems="@bind(vm.plantillaEventoIndicadoresSel)" multiple="true" width="400px" height="300px"/>
+									<listbox model="@bind(vm.evento.eventoIndicadors)" selectedItems="@bind(vm.eventoIndicadoresSel)" multiple="true" width="400px" height="300px">
+										<listhead sizable="true">
+											<listheader label="Indicadores del evento" />
+										</listhead>
 										<template name="model">
 											<listitem label="@load(each.fkIndicador.nombre)" />
 										</template>
+									</listbox>
 								</vlayout>
 							</hlayout>
         				</tabpanel>
         				<tabpanel>
 							<hlayout>
 								<vlayout>
-									Tareas
-									<listbox model="@bind(vm.tareas)" selectedItems="@bind(vm.tareasSel)" multiple="true" width="400px" height="300px"/>
+									<listbox model="@bind(vm.tareas)" selectedItems="@bind(vm.tareasSel)" multiple="true" width="400px" height="300px">
+										<listhead sizable="true">
+											<listheader label="Tareas" />
+										</listhead>
 										<template name="model">
 											<listitem label="@load(each.nombre)" />
 										</template>
+									</listbox>
 								</vlayout>
 								<vbox vflex="1" pack="middle">
 									<button label="&gt;" onClick="@command('tareasAPlantilla')"/>
 									<button label="&lt;" onClick="@command('tareasFueraPlantilla')"/>
 								</vbox>
 								<vlayout>
-									Tareas del evento
-									<listbox model="@bind(vm.plantillaEventoTareas)" selectedItems="@bind(vm.plantillaEventoTareasSel)" multiple="true" width="400px" height="300px"/>
+									<listbox model="@bind(vm.evento.eventoTareas)" selectedItems="@bind(vm.eventoTareasSel)" multiple="true" width="400px" height="300px">
+										<listhead sizable="true">
+											<listheader label="Tareas del evento" />
+										</listhead>
 										<template name="model">
 											<listitem label="@load(each.fkTarea.nombre)" />
 										</template>
+									</listbox>
 								</vlayout>
 							</hlayout>
         				</tabpanel>
