--- a/WebContent/views/desktop/basedatos/exportar/ExportarIndex.zul
+++ b/WebContent/views/desktop/basedatos/exportar/ExportarIndex.zul
@@ -2,16 +2,14 @@
 	<div width="100%" class="${arg.animation_}"
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.basedatos.viewmodels.VM_ImportarIndex')">
+		viewModel="@id('vm') @init('ve.smile.basedatos.viewmodels.VM_ExportarIndex')">
 
 		<div class="row">
 			<div class="col s12">
 				<div class="col s5">
 					<listbox id="listbox" model="@load(vm.objectsList)"
-					mold="paging"
 						selectedItem="@bind(vm.selectedObject)" pagingPosition="top"
-						pageSize="4" onSelect="@command('onSelectTabla')">
-
+						onSelect="@command('onSelectTabla')">
 						<listhead sizable="true">
 							<listheader width="49%" label="Nombre" />
 						</listhead>
@@ -31,18 +29,21 @@
 				</div>
 				<vbox class="col s1">
 					<image style="cursor:pointer" id="chooseAllBtn"
-						onClick="@command('onChooseItem')"
+						onClick="@command('onChooseAllItem')"
 						src="imagenes/rightrightarrow_g.png" />
 					<image style="cursor:pointer" id="chooseBtn"
-						src="imagenes/rightarrow_g.png" />
+						src="imagenes/rightarrow_g.png"
+						onClick="@command('onChooseItem')" />
 					<image style="cursor:pointer" id="removeBtn"
-						src="imagenes/leftarrow_g.png" />
+						src="imagenes/leftarrow_g.png" onClick="@command('onRemoveItem')" />
 					<image style="cursor:pointer" id="removeAllBtn"
-						src="imagenes/leftleftarrow_g.png" />
+						src="imagenes/leftleftarrow_g.png"
+						onClick="@command('onRemoveAllItem')" />
 				</vbox>
 				<div class="col s6" style="margin-left:-40px;">
-					<listbox id="listbox2"
-						model="@load(vm.listsTabla)">
+					<listbox id="listbox2" model="@load(vm.listsTabla)"
+						selectedItem="@bind(vm.posibleTabla)"
+						onSelect="@command('onSelectTablaRespaldo')">
 
 						<listhead sizable="true">
 							<listheader width="49%" label="Nombre" />
