--- a/WebContent/views/desktop/datos/configuracion/clasificacionPregunta/ClasificacionPreguntaFormBasic.zul
+++ b/WebContent/views/desktop/datos/configuracion/clasificacionPregunta/ClasificacionPreguntaFormBasic.zul
@@ -1,18 +1,23 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div width="80%" class="container ${arg.animation_}" use="karen.core.form.controllers.C_WindowForm"
+	<div width="80%" class="container ${arg.animation_}"
+		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.datos.configuracion.clasificacionPregunta.viewmodels.VM_ClasificacionPreguntaFormBasic')">
+		viewModel="@id('vm') @init('ve.smile.datos.configuracion.clasificacion_pregunta.viewmodels.VM_ClasificacionPreguntaFormBasic')">
 
 		<div class="row">
 			<div class="col s12">
 				<div class="input-field col s12">
-					<n:label for="nombre" class="mandatory">Nombre</n:label>
-					<textbox id="nombre" type="text" value="@bind(vm.clasificadorPregunta.nombre)">
+					<n:label for="nombre" class="mandatory">
+						Nombre
+					</n:label>
+					<textbox id="nombre" type="text"
+						value="@bind(vm.clasificadorPregunta.nombre)">
 					</textbox>
 				</div>
 			</div>
 		</div>
-		<div id="divButtonsForm" use="karen.core.form.buttons.containers.DivButtonsForm">
+		<div id="divButtonsForm"
+			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
 	</div>
 </zk>
