--- a/WebContent/views/desktop/datos/parametros/capacitacion/CapacitacionFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/capacitacion/CapacitacionFormBasic.zul
@@ -1,30 +1,4 @@
 <zk xmlns:n="native" xmlns:w="client">
-
-<style>
-		.z-comboitem-selected { background: #AFA197 !important; color:
-		#ffffff !important; } 
-		.z-comboitem:hover,
-		.z-comboitem-selected:hover { 
-		background: #F0F2DC !important;
-		color: #8D7A6F !important; } 
-		
-		.z-comboitem-selected:hover
-		.z-comboitem-text { color: #8D7A6F !important; }
-
-		.z-comboitem-selected .z-comboitem-text { color: #ffffff
-		!important; }
-
-		.z-comboitem { text-shadow: none !important; }
-
-		.page-content-main textarea.materialize-textarea { max-height:
-		100px; }
-		
-		.page-content-main textarea.materialize-textarea:hover, 
-		.page-content-main textarea.materialize-textarea:active,
-		.page-content-main textarea.materialize-textarea:focus{
-			overflow-y: auto; 
-		}
-	</style>
 	<div width="80%" class="container ${arg.animation_}"
 		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
@@ -60,8 +34,8 @@
 			<div sclass="col s12">
 				<div class="input-field offset-s2 col s8">
 					<n:label for="descripcion">Descripción</n:label>
-					<textbox id="descripcion" type="text" maxlength="250"
-						sclass="materialize-textarea" multiline="true"
+					<textbox id="descripcion" type="text"
+						maxlength="250" sclass="materialize-textarea" multiline="true"
 						value="@bind(vm.capacitacion.descripcion)">
 					</textbox>
 				</div>
